internship/assignments/Design/Tutangle_Responsive_2/css/style.css
/* top header */
.top-header {
    width:100%;
    background-color: #7dd9e8;
}
.top-header div{
}
.top-header .logo-search{
    width: calc(100% - 50px);
}
.top-header .search-form{
    display:none;
}
.top-header .small-button-holder{
    background: white;
    width:33px;
    height:33px;
    cursor:pointer;
    border-radius: 17px;
}
.top-header .search-button{
    width:33px;
    height:33px;
    cursor:pointer;
    background : url('../images/search-alt.png') no-repeat;
    border:none;
    border-radius: 17px;
    background-position-x: center;
    background-position-y: center;
}
.top-header .logo{
    margin:0;
}
.top-header .search-holder{
    padding-top:28px;
}
.top-header .user{
    display:none;
}
.dropdown.invites-requests{
    margin-top:25px;
}
.dropdown.action{
    padding:14px 0px 14px 0px;
}
.logo-search .left-part{
    width:100%;
}
.hamburger-menu{
    padding-top:33px;
}
.hamburger-menu span{
  display: block;
  width: 30px;
  height: 3px;
  margin-bottom: 7px;
  position: relative;
  background: #275056;
  border-radius: 3px;
}
.dropdown{
    font-size:18px;
    display: none;
}
.dropdown .sec-user{
    font-size:20px;
    width:100%;
    text-align: center;
    padding-top:20px;
    padding-bottom:20px;
    border-bottom:2px solid #324B4F;
}
.dropdown a{
    color :#324B4F;
}

.dropdown img{
    display:none;
}
.dropdown .action{
    width:100%;
    border-bottom:2px solid #324B4F;
}
.dropdown .invites-requests{
    margin-top:10px;
}
    
.dropdown .action li{
    padding-top:10px;
    padding-bottom:10px;
    text-align:center;
}

.dropdown .sub-div{
    padding:10px 0 10px 0;
    margin:0 auto;
}
.dropdown .invites-requests .image-holder{
    margin-right:8px;
}
.dropdown .requests{
    width: 100%;
}
.dropdown .logout-settings{
    width:100%;
    margin-top:80px;
    color:white;
    min-height:50px;
}
.dropdown .logout-settings .settings{
    background: #324B4F;
    width: 50%;
    min-height:50px;
    text-align: center;
}
.logout-settings p{
    padding-top:12px;
}
.logout-settings .logout{
    background: #C1423F;
    text-align: center;
    width:50%;
    min-height:50px;
}
.logout-settings .l-sub-div{
    width:100%;
}
.navigation-bar{
    display:none;
}
/* --end top header */
/* main-content */
.main-content .entries h1 {
    font-weight: 300;
}
.entries{
    margin: 0 auto;
}
.main-content .recent{
    display:none;
}
.main-content .video{
    display: none;
}

.entries{
    width: 100%;
    max-width:519px;
}
.entries .top-content span{
    display: inline-block;
}
.entries .top-content img{
    display:inline-block;
    margin-left:12px;
}
.entries .top-content{
    text-align: center;
    width:47%;
    height: 30px;
    background-color: #7dd9e8;
    border-radius: 10px;
    margin:2px;
}
.top-content .head-holder{
    width:75%;
    text-align: center;
}
.entries .top-content span{
    padding-top:6px;
    color:white;
}
.entries .top-nav{
    width:100%;
    margin-top:15px;
}
.top-nav .sub-container{
    display:none;
}
.people ul{
    list-style-position:inside;
    width:100%;
}
.people ul > li {
    width:100%;
    padding:15px 0 15px 0;
    border-bottom: 1px solid #d8d8d8;
}
.people .people-text{
    width: calc(100% - 79px);
    min-height:70px;
}
.people-text .head{
    font-size:14px;
    font-weight:500;
    letter-spacing: 0.4px;
    padding-bottom: 3px;
}
.people-text .extra{
    margin-top:2px;
    margin-bottom: 4px;
    font-size: 10px;
    font-weight: 700;
    color : #2fc1da;
}
.people-text .red{
    color: #d63d1b;
}
.people-text .sec{
    font-size:11px;
    letter-spacing: 0.5px;
    margin-top:6px;
    color: #6b6b6b;
}
.sec .author{
    color: #2fc1da;
}
.sec .author:hover{
    color:teal;
}
.sec .sub-status{
    color: green;
}
.sec .topic{
    color: #2fc1da;
}
.sec .topic:hover{
    color: teal;
}
.sec .bold{
    font-weight: 600;
}
/* --end main content -- */
/* footer */

.about-list a:hover{
    color: #2fc1da;
}
.footer a{
    color:white;
}
.footer .content-holder{
    background: #727272;
    color: white;
}
.about-list{
    margin-top:15px;
    width:calc(100% - 100px);
}
.about-list ul{
    width:100%;
    font-size: 15px;
}
.about-list li{
    width:100%;
    margin:10px 0px 10px 0px;
}
.about-list ul li:first-child{
    margin-top:0px
}
.about-list ul li:before{
    content: "";
}
.about-list ul li:first-child:before{
    content: '';
}
.copyright{
    margin:65px 0 20px 0px;
    width:100px;
    font-size: 12px;
}
.copyright p{
    text-align: center;
}
/* ... */

